# bikidata

./: .gitignore  LICENSE  README.md  eswc_2026.ipynb  examples.ipynb  index.py  map.py  pyproject.toml  requirements.txt  split.py  wikidata.md
src/: bikidata.py  setup.py
src/bikidata/: __init__.py  __main__.py  main.py  query.py  semantic.py  workers.py
src/scripts/: index.py  map.py
