[project]
name = "bikidata"
version = "0.3.7"
description = "Developer-friendly Queries over RDF triples"
authors = [
    {name = "Etienne Posthumus", email = "ep@epoz.org"}
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["search", "RDF", "Linked Data"]
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.3.2",
    "numpy>=2.2.4",
    "xxhash>=3.5.0",
    "pandas>=2.2.3",
    "cohere==5.15.0",
    "redis>=6.4.0",
]

[project.urls]
Homepage = "https://github.com/ISE-FIZKarlsruhe/bikidata/"
Repository = "https://github.com/ISE-FIZKarlsruhe/bikidata/"
